--- a/apache2/html/error.conf
+++ b/apache2/html/error.conf
@@ -3,6 +3,7 @@ ErrorDocument 401 /.ErrorDocuments/401.html
 ErrorDocument 403 /.ErrorDocuments/403.html
 ErrorDocument 404 /.ErrorDocuments/404.html
 ErrorDocument 500 /.ErrorDocuments/500.html
+ErrorDocument 503 /.ErrorDocuments/503.html
 
 RedirectMatch 404 ^/.ErrorDocuments/?$
 
@@ -13,5 +14,6 @@ RedirectMatch 404 ^/.ErrorDocuments/?$
         RedirectMatch 404 ^/.ErrorDocuments/403.html$
         RedirectMatch 404 ^/.ErrorDocuments/404.html$
         RedirectMatch 404 ^/.ErrorDocuments/500.html$
+		RedirectMatch 404 ^/.ErrorDocuments/503.html$
     </If>
 </Location>
